项目创建更新0.12.12

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Mobx项目搭建</title>
+	<title>Test项目搭建</title>
 </head>
 <body>
 	<div id="root"></div>
